# cfd

./: Cargo.toml  License  README.md
resources/: cfd_work.txt
src/: cf_ips.rs  checker.rs  domain.rs  helpers.rs  lib.rs  main.rs
